--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,8 +19,10 @@
     "@tanstack/react-query": "^5.51.23",
     "@tanstack/react-query-devtools": "^5.51.23",
     "axios": "^1.7.3",
+    "date-fns": "^3.6.0",
     "qs": "^6.13.0",
     "react": "^18.3.1",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.2",
     "react-redux": "^9.1.2",
