--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@tanstack/react-query-devtools": "^5.51.23",
     "axios": "^1.7.3",
     "date-fns": "^3.6.0",
+    "jwt-decode": "^4.0.0",
     "qs": "^6.13.0",
     "react": "^18.3.1",
     "react-datepicker": "^7.3.0",
