--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "react-hook-form": "^7.52.2",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0",
+    "recharts": "^2.13.0-alpha.4",
     "redux-persist": "^6.0.0",
     "yup": "^1.4.0"
   },
